# mwop

./: LICENSE  README.md  pyproject.toml
samples/: Igreja2004reproduction.ipynb  SOI_CPW_example.ipynb
src/mwop/: CPW.py  EMT.py  IDC.py
